<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="donor">Donor</string>
    <string name="reciever">Reciever</string>
    <string name="blood_group_o">Blood Group</string>
    <string name="submit">Submit</string>
    <string name="positive">+</string>
    <string name="negative">-</string>
</resources>
