<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="horizontal"
    android:background="@color/white"
    android:padding="40dp"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_bank"
        android:textColor="@color/red"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/email"
        android:textAllCaps="true"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textAllCaps="true"
        />
    <Button
        android:id="@id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/red"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quote"
        android:layout_below="@id/loginBtn"
        />
</RelativeLayout>