<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/coverpic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/coverpic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coverpic"
        android:text="@string/blood_bank"
        android:textColor="@color/red"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toRightOf="@id/loginBtn"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/red"
        android:text="@string/register"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>